# vpullela-mcp

./: .pre-commit-config.yaml  .secrets.baseline  README.md  VIBE_CODING_TIPS_TRICKS.md  trivy.yaml
.github/: CODEOWNERS
.github/workflows/: aws-api-mcp-upgrade-version.yml  cfn_nag.yml  check-license-header.json  checkov.yml  codeql.yml  detect-secrets-requirements.txt  powershell.yml  pre-commit-requirements.txt  pre-commit.yml  python.yml  release-initiate-branch.yml  release.yml  scorecard-analysis.yml  semgrep-requirements.txt  semgrep.yml  trivy.yml  typescript.yml
.vex/: CVE-2023-45853.openvex.json
docusaurus/: package-lock.json  package.json  tsconfig.json
docusaurus/docs/: installation.md  intro.md
docusaurus/docs/servers/: aws-security-hub-mcp-server.mdx
samples/mcp-integration-with-kb/: pyproject.toml
samples/mcp-integration-with-nova-canvas/: pyproject.toml
scripts/: verify_awslabs_init.py
src/amazon-bedrock-agentcore-mcp-server/: Dockerfile  README.md  pyproject.toml
src/amazon-kendra-index-mcp-server/: Dockerfile  README.md  pyproject.toml
src/amazon-keyspaces-mcp-server/: README.md  pyproject.toml
src/amazon-mq-mcp-server/: Dockerfile  README.md  pyproject.toml
src/amazon-neptune-mcp-server/: Dockerfile  README.md  pyproject.toml
src/amazon-qbusiness-anonymous-mcp-server/: Dockerfile  README.md  pyproject.toml
src/amazon-qindex-mcp-server/: README.md  pyproject.toml
src/amazon-sns-sqs-mcp-server/: Dockerfile  README.md  pyproject.toml
src/aurora-dsql-mcp-server/: .gitignore  Dockerfile  README.md  pyproject.toml
src/aws-api-mcp-server/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
src/aws-appsync-mcp-server/: Dockerfile  README.md  pyproject.toml
src/aws-bedrock-custom-model-import-mcp-server/: Dockerfile  README.md  pyproject.toml
src/aws-bedrock-data-automation-mcp-server/: Dockerfile  README.md  pyproject.toml
src/aws-dataprocessing-mcp-server/: Dockerfile  README.md  pyproject.toml
src/aws-diagram-mcp-server/: Dockerfile  README.md  pyproject.toml
src/aws-diagram-mcp-server/awslabs/aws_diagram_mcp_server/: __init__.py
src/aws-documentation-mcp-server/: Dockerfile  README.md  pyproject.toml
src/aws-healthomics-mcp-server/: Dockerfile  README.md  pyproject.toml
src/aws-iac-mcp-server/: Dockerfile  README.md  pyproject.toml
src/aws-iot-sitewise-mcp-server/: Dockerfile  README.md  pyproject.toml
src/aws-knowledge-mcp-server/: README.md
src/aws-location-mcp-server/: Dockerfile  README.md  pyproject.toml
src/aws-msk-mcp-server/: Dockerfile  README.md  pyproject.toml
src/aws-network-mcp-server/: Dockerfile  README.md  pyproject.toml
src/aws-pricing-mcp-server/: Dockerfile  README.md  pyproject.toml
src/aws-security-hub-mcp-server/: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  docker-healthcheck.sh  pyproject.toml  test_integration_with_aws.py  uv-requirements.txt
src/aws-security-hub-mcp-server/awslabs/aws_security_hub_mcp_server/: consts.py  models.py  server.py
src/aws-security-hub-mcp-server/tests/: conftest.py  test_fixtures_and_mocks.py  test_integ_basic.py  test_mcp_integration.py  test_mcp_server_functions.py  test_server.py
src/aws-serverless-mcp-server/: README.md  pyproject.toml
src/aws-support-mcp-server/: README.md  pyproject.toml
src/bedrock-kb-retrieval-mcp-server/: Dockerfile  README.md  pyproject.toml
src/billing-cost-management-mcp-server/: Dockerfile  README.md  pyproject.toml
src/ccapi-mcp-server/: Dockerfile  README.md  pyproject.toml
src/cdk-mcp-server/: Dockerfile  README.md  pyproject.toml
src/cfn-mcp-server/: Dockerfile  README.md  pyproject.toml
src/cloudtrail-mcp-server/: Dockerfile  README.md  pyproject.toml
src/cloudwatch-applicationsignals-mcp-server/: Dockerfile  README.md  pyproject.toml
src/cloudwatch-appsignals-mcp-server/: Dockerfile  README.md  pyproject.toml
src/cloudwatch-mcp-server/: Dockerfile  README.md  pyproject.toml
src/code-doc-gen-mcp-server/: README.md  pyproject.toml
src/core-mcp-server/: Dockerfile  README.md  pyproject.toml
src/cost-explorer-mcp-server/: Dockerfile  README.md  pyproject.toml
src/document-loader-mcp-server/: Dockerfile  README.md  pyproject.toml
src/documentdb-mcp-server/: README.md  pyproject.toml
src/dynamodb-mcp-server/: Dockerfile  README.md  pyproject.toml
src/ecs-mcp-server/: README.md  pyproject.toml
src/eks-mcp-server/: Dockerfile  README.md  pyproject.toml
src/elasticache-mcp-server/: Dockerfile  README.md  pyproject.toml
src/finch-mcp-server/: README.md  pyproject.toml
src/frontend-mcp-server/: README.md  pyproject.toml
src/git-repo-research-mcp-server/: README.md  pyproject.toml
src/healthlake-mcp-server/: Dockerfile  README.md  pyproject.toml
src/healthlake-mcp-server/awslabs/healthlake_mcp_server/: __init__.py
src/healthlake-mcp-server/examples/: README.md
src/iam-mcp-server/: Dockerfile  README.md  pyproject.toml
src/lambda-tool-mcp-server/: Dockerfile  README.md  pyproject.toml
src/mcp-lambda-handler/: pyproject.toml
src/memcached-mcp-server/: Dockerfile  README.md  pyproject.toml
src/mysql-mcp-server/: Dockerfile  README.md  pyproject.toml
src/nova-canvas-mcp-server/: Dockerfile  README.md  pyproject.toml
src/openapi-mcp-server/: AUTHENTICATION.md  Dockerfile  README.md  pyproject.toml
src/postgres-mcp-server/: Dockerfile  README.md  pyproject.toml
src/prometheus-mcp-server/: Dockerfile  README.md  pyproject.toml
src/redshift-mcp-server/: Dockerfile  README.md  pyproject.toml
src/s3-tables-mcp-server/: Dockerfile  README.md  pyproject.toml
src/sagemaker-ai-mcp-server/: README.md  pyproject.toml
src/stepfunctions-tool-mcp-server/: Dockerfile  README.md  pyproject.toml
src/syntheticdata-mcp-server/: README.md  pyproject.toml
src/terraform-mcp-server/: Dockerfile  README.md  pyproject.toml
src/timestream-for-influxdb-mcp-server/: Dockerfile  README.md  pyproject.toml
src/valkey-mcp-server/: Dockerfile  README.md  pyproject.toml
src/well-architected-security-mcp-server/: README.md  pyproject.toml
(+114 files in other folders)
